Refine batch API.